tests/idris2/error/error004/expected
1/1: Building Error1 (Error1.idr)
Error: While processing right hand side of wrong. Can't find an implementation for Show (Vect 4 Integer).

Error1:8:9--8:40
 4 |      Nil : Vect Z a
 5 |      (::) : a -> Vect k a -> Vect (S k) a
 6 |
 7 | wrong : String
 8 | wrong = show (the (Vect _ _) [1,2,3,4])
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

1/1: Building Error2 (Error2.idr)
Error: While processing right hand side of show. Multiple solutions found in search of:
    Show (Vect k Integer)

Error2:13:38--13:45
 09 |   show (x :: xs) = show x ++ ", " ++ show xs
 10 |
 11 | Show (Vect n Integer) where
 12 |   show [] = "END"
 13 |   show (x :: xs) = show x ++ ", " ++ show xs
                                           ^^^^^^^

Possible correct results:
    Show implementation at Error2:1
    Show implementation at Error2:2
Error: While processing right hand side of wrong. Multiple solutions found in search of:
    Show (Vect 1 Integer)

Error2:16:9--16:34
 12 |   show [] = "END"
 13 |   show (x :: xs) = show x ++ ", " ++ show xs
 14 |
 15 | wrong : String
 16 | wrong = show (the (Vect _ _) [1])
              ^^^^^^^^^^^^^^^^^^^^^^^^^

Possible correct results:
    Show implementation at Error2:1
    Show implementation at Error2:2
